[package]
name = "rust-mqtt-exploration"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
env_logger = "0.11.8"
paho-mqtt = "0.13.2"
serde_json = "1.0.140"
tokio = "1.44.2"
rumqttc = "0.24.0"
futures = "0.3.31"
async-std = "1.13.1"
dotenv = "0.15.0"
indicatif = "0.17.11"
serde_yml = "0.0.12"
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.35"
tabled = "0.18.0"
rand = "0.9.0"

[dependencies]

[workspace]
members = ["examples/*"]
resolver = "2"